feat : folder setting

--- a/02_Notebooks/01_EDA_Preprocessing.ipynb
+++ b/02_Notebooks/01_EDA_Preprocessing.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\09048\\\\2026project\\\\dalcom_icecream\\\\venv\\\\Scripts\\\\python.exe'"
+       "'c:\\\\Users\\\\09048\\\\2026project\\\\icecream-sales-forecasting\\\\venv\\\\Scripts\\\\python.exe'"
       ]
      },
      "execution_count": 1,
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f9f49674",
    "metadata": {},
    "outputs": [],
